# directory-assistant

./: .gitignore  README.md  dir_tree.py  pyproject.toml  requirements.txt  scheduled.py  streamlit_template.py
.github/workflows/: readme_update.yml
notebooks/: directory_csv.ipynb  directory_glob.ipynb  file_description.ipynb
streamlit/: streamlit_demo.py
