[project]
name = "directory-assistant"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "nbformat>=5.10.4",
    "streamlit>=1.38.0",
    "requests>=2.32.3",
    "pandas>=2.2.2",
    "pyaudio>=0.2.14",
    "pygame>=2.5.2",
    "openai>=1.33.0",
    "langchain>=1.0.2",
    "langchain-community>=0.4.1",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.6.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]